Finish dataloader developement

--- a/dev.ipynb
+++ b/dev.ipynb
@@ -130,7 +130,59 @@
    "execution_count": 44,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pydicom\n",
+    "from torchvision import transforms\n",
+    "import numpy as np\n",
+    "\n",
+    "class DCMDatasetLoader(data.Dataset):\n",
+    "    def __init__(self, root):\n",
+    "        self.root = root\n",
+    "        self.classes, self.class_to_idx = self._find_classes(self.root)\n",
+    "        \n",
+    "        self.img_names = []\n",
+    "        self.labels = []\n",
+    "        for c in self.classes:\n",
+    "            if os.path.isdir(os.path.join(self.root, c)):\n",
+    "                path =os.path.join(self.root, c)\n",
+    "                self.img_names += os.listdir(path)\n",
+    "                self.labels += ([c]*len(os.listdir(path)))\n",
+    "        \n",
+    "        print(\"> Found %d images...\" % (len(self.img_names)))\n",
+    "        \n",
+    "        self.trans = transforms.Compose([\n",
+    "                        transforms.ToTensor(),\n",
+    "                        #transforms.Normalize(mean=[128], std=[128])\n",
+    "                    ])\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.img_names)\n",
+    "    \n",
+    "    def __getitem__(self, idx):\n",
+    "        img = pydicom.dcmread(os.path.join(self.root, self.labels[idx],self.img_names[idx]))\n",
+    "        img = img.pixel_array.astype(np.float32)\n",
+    "        img = self.trans(img)\n",
+    "        \n",
+    "        return img, self.class_to_idx[self.labels[idx]]\n",
+    "    \n",
+    "    def _find_classes(self, dir: str):\n",
+    "        \"\"\"\n",
+    "        Finds the class folders in a dataset.\n",
+    "\n",
+    "        Args:\n",
+    "            dir (string): Root directory path.\n",
+    "\n",
+    "        Returns:\n",
+    "            tuple: (classes, class_to_idx) where classes are relative to (dir), and class_to_idx is a dictionary.\n",
+    "\n",
+    "        Ensures:\n",
+    "            No class is a subdirectory of another.\n",
+    "        \"\"\"\n",
+    "        classes = [d.name for d in os.scandir(dir) if d.is_dir()]\n",
+    "        classes.sort()\n",
+    "        class_to_idx = {cls_name: i for i, cls_name in enumerate(classes)}\n",
+    "        return classes, class_to_idx\n"
+   ]
   },
   {
    "cell_type": "code",
